--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 :root {
+    
+}
+
+body {
     margin:0;
     padding: 0;
     box-sizing: border-box;
@@ -10,7 +14,7 @@ header {
     height: 80px;
     width: 100%;
     
-    /* position: fixed; */
+    position: fixed;
     z-index: 500;
     background: orange;
 }
@@ -20,6 +24,7 @@ nav {
     justify-content: space-between;
     width: 80%;
     margin: auto;
+    color: white;
     
 }
 
@@ -27,6 +32,14 @@ nav {
     flex-basis:20%;
     display: flex;
     align-items: center;
+}
+
+.category {
+    justify-content: flex-start;
+}
+
+.wish-list {
+    justify-content: flex-end;
 }
 
 ul {
@@ -59,4 +72,146 @@ li {
 main {
     width: 80%;
     margin: auto;
+    padding-top: 130px;
+}
+
+.row {
+    display: flex;
+    /* justify-content: space-between; */
+    width: 100%;
+}
+
+.col {
+    display: flex;
+    /* justify-content: space-between; */
+    align-items: center;
+    flex-basis: calc(100% / 3);
+    position: relative;
+    padding-bottom: 5%;
+}
+
+.card {
+    display: flex;
+    flex-basis: calc(100% - 20px);
+    position: relative;
+    padding: 10px;
+ }
+
+.card img {
+    width: 100%;
+}
+
+/* Stili dei contenuti più interni Top/bottom bar  */
+
+.heart {
+    background-color: white;
+    padding: 15px;
+    position: absolute;
+    top: 20px;
+    right: 10px;
+}
+.top-bar {
+    display: flex;
+    justify-content: flex-start;
+    position: absolute;
+    left: 0;
+    bottom: 50px;
+    padding-left: 10px;
+}
+
+.discount {
+    background-color: red;
+}
+
+.sustainability {
+    background-color: green;
+    margin-left: 5px;
+}
+
+.text-white {
+    color: white;
+    font-size: 15px;
+    font-weight: 400;
+    padding: 5px;
+}
+
+.bottom-bar {
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding-left: 10px;  
+}
+
+.brand {
+    font-size: 12px;
+    font-weight: 900;
+}
+
+.model {
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.price {
+    color: red;
+    font-size: 15px;
+    font-weight: 900;
+}
+.oldprice {
+    font-size: 15px;
+    font-weight: 700;
+    color: black;
+    text-decoration: line-through;
+}
+
+/* stili del footer */
+
+.container-foot {
+    width: 80%;
+    margin: auto;
+    display: flex;
+}
+
+footer {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    background-color: rgb(7, 7, 41);
+    color: white;
+}
+
+.credits {
+    display: flex;
+    width: 80%;
+    margin: auto;
+    flex-direction: column;
+}
+.boolando {
+    font-size: 15px;
+    font-weight: 800;}
+.legal {
+    display: flex;
+    justify-content: flex-start;
+    font-size: 12px;
+}
+
+.social {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
+    align-items: center;
+    padding: 5px;
+
+}
+
+.contacts {
+    padding-top: 5px;
+    font-size: 13px;
+    font-weight: 900;
+}
+.soc-media {
+    display: flex;
+
 }
